# rock-paper-scissor-endpoint/contract/openapi-rps.yml
@@ -75,6 +75,25 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/MatchDTO'
+  /match/metrics:
+    get:
+      parameters:
+        - in: query
+          name: type
+          required: true
+          schema:
+            type: string
+      tags:
+        - match
+      description: Get metrics for human or machine
+      operationId: getMetrics
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/MetricsDTO'
   /movement:
     get:
       parameters:
@@ -138,7 +157,7 @@ components:
         idMatch:
           type: integer
           format: int64
-        num:
+        moveOrder:
           type: integer
         robotType:
           $ref: '#/components/schemas/RPSMove'
@@ -150,6 +169,17 @@ components:
       type: array
       items:
         $ref: '#/components/schemas/MovementDTO'
+    MetricsDTO:
+      type: object
+      properties:
+        wins:
+          type: integer
+        rock:
+          type: integer
+        paper:
+          type: integer
+        scissor:
+          type: integer
     RPSMove:
       type: string
       enum:
